# script.service.torrent-tagger

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  addon.xml  hello_world.py  install.py  main.py  pyproject.toml  script.py  service.py
.github/workflows/: learn-github-actions.yml  release-please.yml  run-tests-and-linter.yml  run-tests-pull-request-main.yml  tests-and-linter.yml
libreelec_torrent_linker/: __init__.py  argument_parser.py  install.py  linker.py
libreelec_torrent_linker/file/: __init__.py
libreelec_torrent_linker/linker/: __init__.py
libreelec_torrent_linker/movie_linker/: __init__.py
libreelec_torrent_linker/scanner/: __init__.py
libreelec_torrent_linker/tv_show_linker/: __init__.py
libreelec_torrent_linker/utils/: __init__.py
resources/: settings.xml
resources/language/resource.language.en/: strings.po
resources/language/resource.language.en_gb/: strings.po
resources/lib/: linker.py
src/: libreelec_torrent_renamer.py
tests/: test_is_movie_dir.py  test_is_tv_show_dir.py  test_partition_dirs.py
tests/integration/: test_linker.py  test_readme_example.py
tests/unit/: test_get_movie_name.py  test_is_movie_dir.py  test_is_tv_show_dir.py
