[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libreelec_torrent_renamer"
description = "CLI tool which creates new directories for TV Shows and Movies with proper naming for LibreELEC scraping."
requires-python = ">=3.7"
version = "1.0.0"

[project.scripts]
libreelec_rename_movies = "hello_world_pip:hello_world"
libreelec_rename_tv_shows = "hello_world_pip:hello_world"